# asp-mcp

./: MANIFEST.in  README.md  TODO.md  main.py  pyproject.toml  servers_config.json
agents/: execute_bash_command_agent.json  general_reasoning_agent.json
code/: execute_bash_command.py  execute_python.py  read_permanent_information.py  scrape_website.py  search.py  store_permanent_information.py
src/asp_llm/: chat_session.py  configuration.py  llm_client.py  main.py  server.py  stdio.py  summarizer.py
src/asp_llm/resources/: agent_description.txt
src/asp_mcp_client/: chat_session.py  configuration.py  llm_client.py  main.py  stdio.py
src/asp_mcp_client/resources/: agent_description.txt  servers_config.json
src/asp_mcp_server/: server.py
src/clingo_mcp_server/: server.py
src/clingo_mcp_server/resources/: test_gen.py
src/core/: agent.py  llm.py
src/utils/: json_utils.py
tests/: test_agent.py  test_llm.py
