[project.scripts]
clingo-mcp-server = "clingo_mcp_server.server:main"
asp-llm-client = "asp_llm.main:main"
[project]
name = "ASP_MCP_Agent"
version = "0.1.0"
description = "Agent project with ASP MCP server and LLM client"
authors = [
    { name = "Max Ostrowski", email = "max.ostrowski@potassco.com" }
]
requires-python = ">=3.13"
dependencies = [
    "clingo",
    "mcp",
    "openai",
    "rich",
    "pytest",
    "dotenv",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["clingo_mcp_server", "asp_llm"]

[tool.setuptools.package-data]
"asp_llm.resources" = ["agent_description.txt"]
"clingo_mcp_server.resources" = ["test_gen.py"]

[tool.black]
line-length = 120


[tool.mypy]
strict = true
files = ["src/asp_mcp_server", "src/llm_client"]

