[project.scripts]
asp-mcp-server = "asp_mcp_server.server:main"
asp-mcp-client = "asp_mcp_client.main:main"
[project]
name = "ASP_MCP"
version = "0.1.0"
description = "ASP MCP server and client"
authors = [
    { name = "Max Ostrowski", email = "max.ostrowski@potassco.com" }
]
requires-python = ">=3.13"
dependencies = [
    "clingo",
    "mcp",
    "openai",
    "rich",
    "pytest",
    "dotenv",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["asp_mcp_server", "asp_mcp_client"]

[tool.setuptools.package-data]
"asp_mcp_client.resources" = ["agent_description.txt", "servers_config.json"]
"asp_mcp_server.resources" = ["test_gen.py"]

[tool.black]
line-length = 120


[tool.mypy]
strict = true
files = ["src/asp_mcp_server", "src/asp_mcp_client"]

